syntax = "proto3";

package stroeer.web.article.v1;

import "stroeer/core/v1/article.proto";

option go_package = "github.com/stroeer/tapir/go/stroeer/web/article/v1;article";
option java_multiple_files = true;
option java_package = "de.stroeer.web.article.v1";

message WebArticle {
  string id = 1;
  string web_url = 2;
  string canonical_url = 3;
  stroeer.core.v1.ContentType type = 4;
  string section_path = 5;
  string headline = 6;
  map<string, string> fields = 7;
  repeated stroeer.core.v1.Element elements = 8;
  repeated stroeer.core.v1.Author authors = 9;
}

message RelatedWebArticle {
  WebArticle article = 1;
  RelatedWebArticleRole role = 2;
}

enum RelatedWebArticleRole {
  RELATED_WEB_ARTICLE_ROLE_UNSPECIFIED = 0;
  RELATED_WEB_ARTICLE_ROLE_EDITORIAL = 1;
}
